User Prefrences
Create endpoint for User Prefrences to save get and also get personlized news
